# stems

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
docs/: architecture.md
examples/: basic.yaml
src/: app.rs  config.rs  main.rs  types.rs
src/audio/: callback.rs  coreaudio_playback.rs  coreaudio_playback_ffi.h  coreaudio_playback_ffi.m  device.rs  engine.rs  mix_writer.rs  mod.rs  playback.rs  track.rs  writer.rs
src/midi/: clock.rs  handler.rs  mod.rs
src/ui/: app_ui.rs  input.rs  mod.rs
src/ui/widgets/: help_view.rs  level_meter.rs  mod.rs  status_bar.rs  track_list.rs
